# src/main/java/com/example/jwtauthsvr/dto/UserEnabledRequest.java
@@ -1,0 +1,10 @@
+package com.example.jwtauthsvr.dto;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Setter
+@Getter
+public class UserEnabledRequest {
+    private Boolean enabled;
+}
